Changed: Created modal class and move the modal functionality to it ( [#1340](https://github.com/WPChill/download-monitor/issues/1340) )
Added: Alternative license activation server ( [#1341](https://github.com/WPChill/download-monitor/issues/1341) )

= 4.8.10 - 08.09.2023 =
Fixed: "Downloading Page" upsell meta box does not hide when the addon is active ( [#1329](https://github.com/WPChill/download-monitor/issues/1329) )
Fixed: Category-Filter not working in Widget “List of Download” ( [#1320](https://github.com/WPChill/download-monitor/issues/1320) )
Changed: Remake the hooking reports filtering functionality ( [#1324](https://github.com/WPChill/download-monitor/issues/1324) )
Added: Upsells for the new reports filters ( [#1325](https://github.com/WPChill/download-monitor/issues/1325) )

= 4.8.9 - 01.09.2023 =
Added: Security & feature updates notification opt in.

= 4.8.8 - 22.08.2023 =
Changed: Changed text input to select + input for classic editor "Insert Download" popup ( [#1197](https://github.com/WPChill/download-monitor/issues/1197) )
Fixed: Reports start day to match start day in wordpress settings - only available for Sunday & Monday. ( [#1180](https://github.com/WPChill/download-monitor/issues/1180) )
Added: Global bool variable to enable/disable File Browser "DLM_FILE_BROWSER" ( [#1259](https://github.com/WPChill/download-monitor/issues/1259) )
Fixed: Downloads from admin dashboard are no longer logged. ( [#1239](https://github.com/WPChill/download-monitor/issues/1239) )
Added: do_actions hooks to the backwards compatibility methods ( [#1239](https://github.com/WPChill/download-monitor/issues/1239) )
Added: Filter to disable/change the loading progress indicator ( [#1213](https://github.com/WPChill/download-monitor/issues/1213) )
Added: Setters & Getters for the logging class ( [#1312](https://github.com/WPChill/download-monitor/issues/1312) )

= 4.8.7 - 25.07.2023 =